code revu par catherine
retrait des titres initiaux

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>titre 1</h1>
-    <p>Mon premier paragraphe.</p>  
-    <div>X</div>
+    <h1>Mort pion</h1>
     <!-- Cree un jeu de mort pion -->
     <div id="jeu"></div>
     <script>
