modif de code par hugues
codage du tableau ligne par ligne

--- a/index.html
+++ b/index.html
@@ -13,38 +13,78 @@
     <script>
         // On cree un tableau de 9 cases
         let jeu = new Array(9);
+        let currentPlayer = "X";
         // On cree une boucle pour remplir le tableau
-        for (let i = 0; i < jeu.length; i++) {
-            // On cree un element div
-            let div = document.createElement("div");
-            // On ajoute la classe case
-            div.classList.add("case");
-            // On ajoute un id
-            div.id = "case" + i;
-            // On ajoute un event listener
-            div.addEventListener("click", function() {
-                // On ajoute un X
-                div.innerHTML = "X";
-                // On ajoute la classe X
-                div.classList.add("X");
-                // On retire l'event listener
-                div.removeEventListener("click", arguments.callee);
-            });
-            // On ajoute le div au jeu
-            document.getElementById("jeu").appendChild(div);
+
+        function checkWin(player){
+            // On verifie si le joueur a gagne
+            if(jeu[0] == player && jeu[1] == player && jeu[2] == player){
+                return true;
+            }
+            if(jeu[3] == player && jeu[4] == player && jeu[5] == player){
+                return true;
+            }
+            if(jeu[6] == player && jeu[7] == player && jeu[8] == player){
+                return true;
+            }
+            if(jeu[0] == player && jeu[3] == player && jeu[6] == player){
+                return true;
+            }
+            if(jeu[1] == player && jeu[4] == player && jeu[7] == player){
+                return true;
+            }
+            if(jeu[2] == player && jeu[5] == player && jeu[8] == player){
+                return true;
+            }
+            if(jeu[0] == player && jeu[4] == player && jeu[8] == player){
+                return true;
+            }
+            if(jeu[2] == player && jeu[4] == player && jeu[6] == player){
+                return true;
+            }
+            return false;
+        }
+
+        for (let i = 0; i < 3; i++){
+            const row = document.createElement('div');
+            row.classList.add('row');
+            for (let j = 0; j < 3; j++){
+                const cell = document.createElement('div');
+                cell.classList.add('cell');
+                row.appendChild(cell);
+
+                // On ajoute un event listener sur chaque cellule
+                cell.addEventListener('click', () => {
+                    // On verifie si la case est vide
+                    if (cell.textContent === ""){
+                        // On ajoute le joueur courant dans la case
+                        cell.textContent = currentPlayer;
+                        // On ajoute le joueur courant dans le tableau
+                        jeu[i * 3 + j] = currentPlayer;
+                        // On verifie si le joueur courant a gagne
+                        if (checkWin(currentPlayer)){
+                            alert(`${currentPlayer} a gagne`);
+                        }
+                        // On change de joueur
+                        currentPlayer = currentPlayer === "X" ? "O" : "X";
+                    }
+                });
+            }
+            document.getElementById('jeu').appendChild(row);
         }
     </script>
     <style>
-        .case {
+        .row{
+            display: flex;
+        }
+        .cell{
             width: 100px;
             height: 100px;
             border: 1px solid black;
-            display: inline-block;
-            text-align: center;
-            line-height: 100px;
-        }
-        .X {
-            color: red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
         }
     </style>
 </body>
