--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Mort pion</h1>
+    <h1>Mort pion de hugues</h1>
     <!-- Cree un jeu de mort pion -->
     <div id="jeu"></div>
     <script>
