--- a/index.html
+++ b/index.html
@@ -1,91 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="mortpion.css">
 </head>
+
 <body>
     <h1>Mort pion</h1>
     <!-- Cree un jeu de mort pion -->
     <div id="jeu"></div>
-    <script>
-        // On cree un tableau de 9 cases
-        let jeu = new Array(9);
-        let currentPlayer = "X";
-        // On cree une boucle pour remplir le tableau
-
-        function checkWin(player){
-            // On verifie si le joueur a gagne
-            if(jeu[0] == player && jeu[1] == player && jeu[2] == player){
-                return true;
-            }
-            if(jeu[3] == player && jeu[4] == player && jeu[5] == player){
-                return true;
-            }
-            if(jeu[6] == player && jeu[7] == player && jeu[8] == player){
-                return true;
-            }
-            if(jeu[0] == player && jeu[3] == player && jeu[6] == player){
-                return true;
-            }
-            if(jeu[1] == player && jeu[4] == player && jeu[7] == player){
-                return true;
-            }
-            if(jeu[2] == player && jeu[5] == player && jeu[8] == player){
-                return true;
-            }
-            if(jeu[0] == player && jeu[4] == player && jeu[8] == player){
-                return true;
-            }
-            if(jeu[2] == player && jeu[4] == player && jeu[6] == player){
-                return true;
-            }
-            return false;
-        }
-
-        for (let i = 0; i < 3; i++){
-            const row = document.createElement('div');
-            row.classList.add('row');
-            for (let j = 0; j < 3; j++){
-                const cell = document.createElement('div');
-                cell.classList.add('cell');
-                row.appendChild(cell);
-
-                // On ajoute un event listener sur chaque cellule
-                cell.addEventListener('click', () => {
-                    // On verifie si la case est vide
-                    if (cell.textContent === ""){
-                        // On ajoute le joueur courant dans la case
-                        cell.textContent = currentPlayer;
-                        // On ajoute le joueur courant dans le tableau
-                        jeu[i * 3 + j] = currentPlayer;
-                        // On verifie si le joueur courant a gagne
-                        if (checkWin(currentPlayer)){
-                            alert(`${currentPlayer} a gagne`);
-                        }
-                        // On change de joueur
-                        currentPlayer = currentPlayer === "X" ? "O" : "X";
-                    }
-                });
-            }
-            document.getElementById('jeu').appendChild(row);
-        }
-    </script>
-    <style>
-        .row{
-            display: flex;
-        }
-        .cell{
-            width: 100px;
-            height: 100px;
-            border: 1px solid black;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 50px;
-        }
-    </style>
+    <script src="mortpion.js"></script>
 </body>
+
 </html>
